--- a/notebook/FinalProject_vFinal.ipynb
+++ b/notebook/FinalProject_vFinal.ipynb
@@ -2135,7 +2135,7 @@
     "O coeficiente negativo para a variável de generosidade pode sugerir que países mais generosos têm uma menor taxa de mortalidade por COVID-19. Isso pode estar relacionado ao comportamento social, como o apoio mútuo e a cooperação entre os cidadãos, que podem levar a um melhor cumprimento das medidas de saúde e a uma resposta coletiva mais eficaz durante a pandemia.\n",
     "\n",
     "### Percepção de Corrupção\n",
-    "O coeficiente negativo para a variável de corrupção pode indicar que a corrupção percebida está associada a uma maior taxa de mortalidade por COVID-19. A corrupção pode enfraquecer a capacidade do governo de responder efetivamente à pandemia, resultando em uma disseminação mais ampla do vírus, falta de recursos adequados e acesso desigual aos serviços de saúde."
+    "O coeficiente negativo indica que a corrupção percebida está associada a uma menor taxa de mortalidade por COVID-19. A hipótese é que a confiabilidade dos dados relacionados ao COVID é menor em países mais corruptos."
    ]
   },
   {
